syntax = "proto3";
import "Authorization.proto";

message ConfirmAuthorizationRequest {
  string code = 1;

  message Response {
    oneof message {
      Authorization authorization = 1;
      InvalidCode invalidCode = 2;
    }

    message InvalidCode {
      int32 attemptsLeft = 1;
    }
  }
}