syntax = "proto3";

import "/timemates/auth/core/types/Authorization.proto";
import "/timemates/auth/core/types/AuthorizationView.proto";


option java_package = "org.timemates.api.auth.core.requests";

message GetAuthorizationsRequest {
  // null if it's start of pagination
  optional string pageToken = 1;
  optional int32 pageSize = 2;

  message Response {
    repeated AuthorizationView authorizations = 1;
    string nextPageToken = 2;
  }
}